<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired league</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
</resources>
