<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".leagueActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/im2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/desiredleaguebg" android:contentDescription="@string/background_image"/>

    <ImageView
            app:srcCompat="@drawable/swooshlogo"
            android:layout_width="88dp"
            android:layout_height="29dp"
            android:id="@+id/imageView2" android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="18sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mensToggle" android:textOff="@string/mens"
                android:textOn="@string/mens" android:background="@drawable/swoosh_selector"
                android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womenToggle" android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" android:textOff="@string/womens" android:textOn="@string/womens"
                android:background="@drawable/swoosh_selector" android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coedToggle" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:background="@drawable/swoosh_selector"
                android:textColor="@android:color/white"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>